--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "@syncfusion/ej2": "^19.4.48",
-    "@syncfusion/ej2-react-calendars": "^19.4.56",
-    "@syncfusion/ej2-react-charts": "^19.4.54",
-    "@syncfusion/ej2-react-dropdowns": "^19.4.56",
-    "@syncfusion/ej2-react-grids": "^19.4.56",
+    "@syncfusion/ej2-react-calendars": "^19.4.48",
+    "@syncfusion/ej2-react-charts": "^19.4.50",
+    "@syncfusion/ej2-react-dropdowns": "^19.4.52",
+    "@syncfusion/ej2-react-grids": "^19.4.50",
     "@syncfusion/ej2-react-inputs": "^19.4.52",
-    "@syncfusion/ej2-react-kanban": "^19.4.52",
-    "@syncfusion/ej2-react-popups": "^19.4.53",
-    "@syncfusion/ej2-react-richtexteditor": "^19.4.56",
-    "@syncfusion/ej2-react-schedule": "^19.4.55",
+    "@syncfusion/ej2-react-kanban": "^19.4.48",
+    "@syncfusion/ej2-react-popups": "^19.4.52",
+    "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
+    "@syncfusion/ej2-react-schedule": "^19.4.50",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "^3.0.1"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,7 +52,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.19",
-    "tsconfig-paths": "^4.2.0"
+    "tailwindcss": "^3.0.19"
   }
 }
